# gemini-to-web

./: README.md  pyproject.toml
example/: index.gmi  post_1.gmi  post_2.gmi  post_3.gmi
src/gemini_to_web/: __init__.py  html.py  parser.py
