[project]
name = "gemini-to-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alex", email = "alex@pdp7.net" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gemini-to-web = "gemini_to_web:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
