[project]
name = "gemini-to-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alex", email = "alex@pdp7.net" }
]
requires-python = ">=3.12"
dependencies = [
    "htmlgenerator>=1.2.32",
    "lxml>=6.0.2",
]

[project.scripts]
gemini-to-web-parse= "gemini_to_web.parser:cli_parse"
gemini-to-web-html = "gemini_to_web.html:cli_html"
gemini-to-web = "gemini_to_web:converter"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
